# CustomArch

./: .gitignore  CMakeLists.txt  Instructions.md
compiler/: Cargo.toml
compiler/src/: main.rs
compiler/src/assembler/: argument.rs  instructions.rs  mod.rs  program.rs  registers.rs  section.rs  textparser.rs
compiler/src/prgms/: array.S  fib.S  macro.S
example/: fib.asm  main.asm  main.ast
src/: main.cpp
src/assembler/: fs.cpp  fs.hpp  main.cpp
src/assembler/asmb/: asmb_core.cpp  asmb_core.hpp  lex.hpp
src/assembler/backend/: fs.hpp
src/assembler/backend/asmb/: asmb_core.cpp  asmb_core.hpp  ast.cpp  ast.hpp  expr.cpp  expr.hpp  lex.cpp  lex.hpp
src/assembler/backend/ext/: types.hpp  util.hpp
src/assembler/example/: main.asm
src/assembler/ext/: interval_allocator.hpp  util.hpp
src/emulator/: emulator.cpp  emulator.hpp  main.cpp
src/emulator/emulator/: emulator.cpp  emulator.hpp
src/emulator/emulator/program/: program.cpp  program.hpp
src/emulator/emulator/rom/: rom.cpp  rom.hpp
src/emulator/program/: program.cpp  program.hpp
